# mini-fold

./: README.md
fold1/: pyproject.toml
fold1/config/: config.yaml
fold1/data/: bindings.py  jax_cache.py
fold1/helpers/non-jax/: load_cache.py  mkcache.py
fold1/helpers/read/: combined.py.model
ligand_binding_gnn/: Dockerfile  README.md  requirements.txt  run.sh
ligand_binding_gnn/configs/: config.yaml
ligand_binding_gnn/dataset/: jax_load_cache.py  load_models.py  pre_process.py  read.md  upload_hf.py
ligand_binding_gnn/src/: dataset.py  eval.py  infer.py  net.py  pre_process.py  prep.py  train.py  utils.py
notebooks/: 09 Challenge_ Mini AlphaFold – Small-Scale Protein Structure & Drug Discovery AI.docx  classification-alphafold0001 kaggle.ipynb  classification-alphafold0001.ipynb  classification_alphafold0001 2.ipynb
protein-lig-fold/: put.sh
protein-lig-fold/ligand_protein_binding/: .gitignore  Dockerfile  README.md  requirements.txt  run.py  setup.py
protein-lig-fold/ligand_protein_binding/configs/: config.py
protein-lig-fold/ligand_protein_binding/scripts/: inference.py
protein-lig-fold/ligand_protein_binding/src/: data_processor.py  dataset.py  model.py  trainer.py
