[project]
name = "mini-fold"
version = "0.1.0"
description = "Alphafold prototype based on Google DeepMind AlphaFold Project"
authors = [
    {name = "spass",email = "168576652+sp4s-s@users.noreply.github.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
